[package]
name = "yunchaoplush_rw"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
actix-web = "4.0.0-beta.3"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }